# TotallySpies

./: .gitignore  README.md
backend/: app.py  build_graph.py  chatbot.py  connect_repos.py  generate_summary.py  get_file_info.py  graph.json  process.py  process_repos.py  pyproject.toml  test.py  test_db.py
backend/src/TestRepo1/funcs/: div.py  mul.py
backend/src/TestRepo1/services/: call_api.py
backend/src/cloning_dir/Estimation_Functions/estimators/: kalman_filtar.py
backend/src/cloning_dir/ML_endpoint/: main.py
backend/src/cloning_dir/RAG_chatbot/: chatbot.py  main.py
backend/src/cloning_dir/RAG_chatbot/rag/: llm.py  retriever.py
backend/src/cloning_dir/TestRepo2/: main.py
backend/src/cloning_dir/steglib/: base.py  dwt.py  dwt_rgb.py
backend/src/cloning_dir/test1/: main.py
backend/src/cloning_dir/test1/estimators/: maximum_likelihood_estimator.py
backend/src/cloning_dir/test1/neutal_network/: cifar_10_nn.py
backend/src/cloning_dir/test1/services/: call_api.py
backend/src/core/: config.py
backend/src/data/: chroma.sqlite3
backend/src/graph_processing/: graph_builder.py  graph_gen.py  services_registry.py
backend/src/rag/: embedder.py  llm.py  retriever.py  summary_guide.py
backend/src/routing/: ai.py  auth.py
backend/src/sqldb/: connection.py  crud.py  db.py  models.py  schemas.py
backend/src/test_dir/steglib/: dct.py  edgelsb.py  pvd.py
backend/src/test_dir/test1/: main.py
backend/src/utils/: connect_repos.py  iterate_cloning_dir.py  parsers.py  process_file.py  url_extractor.py
backend/tests/: test.py  test_db.py
(+32 files in other folders)
