[project]
name = "backend"
version = "0.1.0"
description = "Totally Spies!!!!!!!"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.5",
    "langsmith>=0.1.139",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",
    "docarray>=0.40.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "google-search-results>=2.4.2",
    "langchain-groq>=0.2.2",
    "jupyter>=1.1.1",
    "chromadb>=1.3.5",
    "sentence-transformers>=5.1.2",
    "langchain-text-splitters>=1.0.0",
    "ftfy>=6.3.1",
    "langchain-chroma>=1.0.0",
    "pydantic-settings>=2.12.0",
    "mysql-connector-python>=9.5.0",
    "cohere>=5.20.0",
    "sqlalchemy>=2.0.45",
    "pydantic>=2.12.5",
]
